--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "16.14.0"
+  },
   "dependencies": {
     "@types/node": "^18.6.4",
     "dotenv": "^16.0.1",
     "needle": "^3.1.0",
     "node-telegram-bot-api": "^0.58.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "scripts": {
     "build": "tsc",
-    "start": "node ./bin/app.js",
-    "dev": "ts-node ./src/app.ts"
+    "run": "node ./bin/app.js",
+    "start": "ts-node ./src/app.ts"
   },
   "devDependencies": {
     "@types/needle": "^2.5.3",
-    "@types/node-telegram-bot-api": "^0.57.1",
-    "ts-node": "^10.9.1"
+    "@types/node-telegram-bot-api": "^0.57.1"
   }
 }
