--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "node": "16.14.0"
   },
   "dependencies": {
+    "@types/needle": "^2.5.3",
     "@types/node": "^18.6.4",
+    "@types/node-telegram-bot-api": "^0.57.1",
     "dotenv": "^16.0.1",
     "needle": "^3.1.0",
     "node-telegram-bot-api": "^0.58.0",
@@ -19,8 +21,5 @@
     "run": "node ./bin/app.js",
     "start": "ts-node ./src/app.ts"
   },
-  "devDependencies": {
-    "@types/needle": "^2.5.3",
-    "@types/node-telegram-bot-api": "^0.57.1"
-  }
+  "devDependencies": {}
 }
